--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://alex-grt.github.io/",
   "name": "mesto-react",
   "version": "0.1.0",
   "private": true,
@@ -18,6 +19,10 @@
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/alex-grt/mesto-react.git"
   },
   "eslintConfig": {
     "extends": [
