- отредактирована строка homepage в package.json и файл README.md

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://alex-grt.github.io/",
+  "homepage": "https://alex-grt.github.io/mesto-react",
   "name": "mesto-react",
   "version": "0.1.0",
   "private": true,
